test/expected/passthrough/1.straight/exposing/dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  creationTimestamp: "2020-03-03T01:42:49Z"
  generation: 1
  labels:
    mesh: passthrough
  name: exposition-passthrough-helloworld-intermesh
  namespace: default
  ownerReferences:
  - apiVersion: mm.ibm.istio.io/v1
    kind: ServiceExposition
    name: helloworld
    uid: 4a34278f-5cf0-11ea-b41a-ca67b6d79c4d
  resourceVersion: "70131024"
  selfLink: /apis/networking.istio.io/v1alpha3/namespaces/default/destinationrules/exposition-passthrough-helloworld-intermesh
  uid: 4a5bc199-5cf0-11ea-8107-aa3f405a4c17
spec:
  host: helloworld.default.svc.cluster.local
  subsets:
  - name: notls
    trafficPolicy:
      tls: {}
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
